@@ -20,7 +20,7 @@
         </tbody>
       </table>
     </div>
-    <div>
+    <div id="context-area">
       <table>
         <caption>Context information</caption>
         <tbody>
